Fixes to tooltip display, alignment and padding.

--- a/gitb-ui/app/assets/stylesheets/css/custom.css
+++ b/gitb-ui/app/assets/stylesheets/css/custom.css
@@ -193,3 +193,7 @@ div.execution {
 	display: inline-block;
 	padding-top: 7px;	
 }
+
+.tooltip-inner {
+	min-width: 200px !important;
+}
